Fix thread-safety issue in webProcessPoolHighDynamicRangeDidChangeCallback() https://bugs.webkit.org/show_bug.cgi?id=213689 <rdar://problem/64443996>

Reviewed by Darin Adler.

webProcessPoolHighDynamicRangeDidChangeCallback() gets called on a background thread so we
need to make sure we dispatch to the main thread before we iterate over the process pools.

* UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::webProcessPoolHighDynamicRangeDidChangeCallback):


Canonical link: https://commits.webkit.org/226501@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263636 268f45cc-cd09-0410-ab3c-d52691b4dbfc